projects/vb6parse/snapshots/syntax/expressions/logical_and.snap
---
source: projects/vb6parse/src/syntax/expressions/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: BooleanLiteralExpression
              children:
                - kind: TrueKeyword
                  text: "True"
            - kind: Whitespace
              text: " "
            - kind: AndKeyword
              text: And
            - kind: Whitespace
              text: " "
            - kind: BooleanLiteralExpression
              children:
                - kind: FalseKeyword
                  text: "False"
        - kind: Newline
          text: "\n"
