projects/vb6parse/snapshots/syntax/expressions/new_expression.snap
---
source: projects/vb6parse/src/syntax/expressions/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: NewExpression
          children:
            - kind: NewKeyword
              text: New
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: MyClass
        - kind: Newline
          text: "\n"
